unpackaged/main/default/objects/Account/fields/AndyDemo__c.field-meta.xml
<CustomField>
    <fullName>AndyDemo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AndyDemo</label>
    <type>Checkbox</type>
</CustomField>