unpackaged/main/default/objects/Account/fields/Demo__c.field-meta.xml
<CustomField>
    <fullName>Demo__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Demo</label>
    <type>Checkbox</type>
</CustomField>