unpackaged/main/default/objects/Account/fields/Demo_completed__c.field-meta.xml
<CustomField>
    <fullName>Demo_completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Demo completed?</label>
    <type>Checkbox</type>
</CustomField>