unpackaged/main/default/objects/Account/fields/Demo_Details__c.field-meta.xml
<CustomField>
    <fullName>Demo_Details__c</fullName>
    <label>Demo Details</label>
    <length>200</length>
    <type>Text</type>
</CustomField>