unpackaged/main/default/objects/Account/fields/Demo_field__c.field-meta.xml
<CustomField>
    <fullName>Demo_field__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Demo field</label>
    <type>Checkbox</type>
</CustomField>