unpackaged/main/default/objects/Account/fields/Eamonn__c.field-meta.xml
<CustomField>
    <fullName>Eamonn__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Eamonn</label>
    <type>Checkbox</type>
</CustomField>