unpackaged/main/default/objects/Account/fields/Handover_2__c.field-meta.xml
<CustomField>
    <fullName>Handover_2__c</fullName>
    <label>Handover_2</label>
    <length>200</length>
    <type>Text</type>
</CustomField>