unpackaged/main/default/objects/Account/fields/New_field2__c.field-meta.xml
<CustomField>
    <fullName>New_field2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New field2</label>
    <type>Checkbox</type>
</CustomField>