unpackaged/main/default/objects/Account/fields/New_field_for_Back_propagation__c.field-meta.xml
<CustomField>
    <fullName>New_field_for_Back_propagation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New field for Back propagation</label>
    <type>Checkbox</type>
</CustomField>