unpackaged/main/default/objects/Account/fields/New_Field_for_Release_2__c.field-meta.xml
<CustomField>
    <fullName>New_Field_for_Release_2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New Field for Release 2</label>
    <type>Checkbox</type>
</CustomField>