unpackaged/main/default/objects/Account/fields/New_field_for_release__c.field-meta.xml
<CustomField>
    <fullName>New_field_for_release__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New field for release</label>
    <type>Checkbox</type>
</CustomField>