unpackaged/main/default/objects/Account/fields/NewFieldWorks__c.field-meta.xml
<CustomField>
    <fullName>NewFieldWorks__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NewFieldWorks</label>
    <type>Checkbox</type>
</CustomField>