unpackaged/main/default/objects/Account/fields/qa_sessions__c.field-meta.xml
<CustomField>
    <fullName>qa_sessions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>qa sessions</label>
    <type>Checkbox</type>
</CustomField>