unpackaged/main/default/objects/Account/fields/TestAlex2__c.field-meta.xml
<CustomField>
    <fullName>TestAlex2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TestAlex2</label>
    <type>Checkbox</type>
</CustomField>