unpackaged/main/default/objects/Account/fields/TestAlex__c.field-meta.xml
<CustomField>
    <fullName>TestAlex__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TestAlex</label>
    <type>Checkbox</type>
</CustomField>